# purpo-project

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  evals.py  main.py  memory.py  observability.py  output.json  output.txt  prometheus.yml  pyproject.toml
.claude/: settings.json
data/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal
docs/: TZ.md  architecture.md  evals_guide.md  memory_design.md  observability_guide.md
evals_results/: report_ed4bf06a.json
skills/: cooking_coach.md  grocery_list.md  nutritionist.md  recipe_finder.md
web/: api.py
web/static/: index.html
