[project]
name = "purpo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "langgraph-supervisor>=0.0.31",
    "ollama>=0.6.1",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "langgraph-checkpoint-sqlite>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
